<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/art_img"
        android:layout_width="@dimen/margin30dp"
        android:layout_height="@dimen/margin30dp"
        android:layout_marginLeft="@dimen/margin20"
        android:src="@drawable/equalizer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/artistName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_topic"
        android:layout_marginLeft="@dimen/margin10"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:text="@string/artist_name"
        android:textColor="@color/rv_txt_color"
        android:textSize="@dimen/songs_txt_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/art_img"
        app:layout_constraintRight_toLeftOf="@id/separator"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_topic"
        android:layout_marginLeft="@dimen/margin10"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:text="@string/separator"
        android:textColor="@color/rv_txt_color"
        android:textSize="@dimen/songs_txt_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/artistName"
        app:layout_constraintRight_toLeftOf="@id/songName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_topic"
        android:layout_marginLeft="@dimen/margin10"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:text="@string/song_name"
        android:textColor="@color/rv_txt_color"
        android:textSize="@dimen/songs_txt_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/separator"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>