<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/page_bg_color">

        <TextView
            android:id="@+id/page_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_header"
            android:background="@color/page_title_bg_color"
            android:fontFamily="cursive"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/playing_now_title"
            android:textColor="@color/page_title_txt_color"
            android:textSize="@dimen/header_font_size"
            android:textStyle="bold|italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/song_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/height_header"
            android:src="@drawable/equalizer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/page_title" />

        <TextView
            android:id="@+id/artist_name_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:fontFamily="casual"
            android:text="@string/artist_name_playing"
            android:textColor="@color/page_title_bg_color"
            android:textSize="@dimen/topic_txt_size"
            android:textStyle="bold|italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song_img" />

        <TextView
            android:id="@+id/song_name_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:fontFamily="casual"
            android:text="@string/song_name_playing"
            android:textColor="@color/page_title_bg_color"
            android:textSize="@dimen/topic_txt_size"
            android:textStyle="bold|italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artist_name_playing"
            app:layout_constraintBottom_toTopOf="@id/play_stop"/>

        <ImageView
            android:id="@+id/play_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:src="@drawable/ic_play_arrow_40dp"
            app:layout_constraintLeft_toRightOf="@id/previous"
            app:layout_constraintRight_toLeftOf="@id/next"
            app:layout_constraintTop_toBottomOf="@id/song_name_playing"
            app:layout_constraintBottom_toTopOf="@id/home_btn" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:src="@drawable/ic_navigate_next_40dp"
            app:layout_constraintLeft_toRightOf="@id/play_stop"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/song_name_playing"
            app:layout_constraintBottom_toTopOf="@id/home_btn"/>

        <ImageView
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:src="@drawable/ic_keyboard_arrow_left_40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/play_stop"
            app:layout_constraintTop_toBottomOf="@id/song_name_playing"
            app:layout_constraintBottom_toTopOf="@id/home_btn"/>

        <ImageView
            android:id="@+id/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:background="@color/page_title_bg_color"
            android:src="@drawable/ic_home_white_40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/saved_btn" />

        <ImageView
            android:id="@+id/saved_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:background="@color/page_title_bg_color"
            android:src="@drawable/ic_library_music_40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/home_btn"
            app:layout_constraintRight_toLeftOf="@id/play_now_btn" />

        <ImageView
            android:id="@+id/play_now_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:background="@color/page_title_bg_color"
            android:src="@drawable/ic_play_arrow_white_40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/saved_btn"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
